2018-05-13  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42760: Src/Zle/zle_thingy.c: move stack variable outside
	while loop scope as it is accessed in the while condition

2018-05-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 42180: dana: Src/Zle/compcore.c: safety when removing
	separators in completion.

	* 42101 (tweaked): dana: Src/exec.c, Test/A06assign.ztst:
	assigning shell status to array was broken.

2018-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 42752: Completion/Unx/Command/_git: better completion
	handling for git aliases expanding to external command.

	* 42751: Src/Zle/zle_main.c: Protect shell status around
	time function execution in line editor.

2018-05-02  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* Eitan Adler: 42740: Completion/BSD/Command/_systat:
	Teach _systat about the 'zarc' screen

	* Eitan Adler: 42732: Completion/Unix/Command/_ifconfig:
	Add several more entries to ifconfig

	* 42743: Completion/Unix/Command/_vorbis: update vorbis-tools
	completion and include vorbiscomment with the rest

2018-05-01  Peter Stephenson  <p.stephenson@samsung.com>

	* from branch fork_early, c.f. 42702: Src/exec.c: Various changes
	to make forking for a command work better.  Move the fork even
	earlier; add case of non-final pipeline elements; _exit when
	forked; remove previous early fork in caller; replace fix for
	leaked file descriptor in pipeline handling.

2018-04-29  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* Matthew Martin: 42730: Completion/Unix/Command/_rmdir,
	Completion/Unix/Type/_directories: Complete the options for rmdir

	* Matthew Martin: 42729: Completion/Unix/Command/_df:
	update df completion for [DFNO]BSD

	* 42676: Completion/Unix/Command/_dd: deal with system
	specific arguments

	* 42728: Completion/Unix/Command/_tiff: update options and
	add handling for tiff2pdf

2018-04-29  Barton E. Schaefer  <schaefer@zsh.org>

	* Ricardo Giorni: 42701: fix 42355 for multiple backslashes
